--- a/dyluna/dyluna_app/templates/main.html
+++ b/dyluna/dyluna_app/templates/main.html
@@ -22,7 +22,7 @@
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li><a href="/menu/users">Wyświetl listę użytkowników</a></li>
+                    <li><a href="/menu">Wyświetl listę użytkowników</a></li>
                     <li><a href="/menu/workshop">Wyświetl listę zajęć</a></li>
                     <li><a href="/menu/workshop_schedule">Wyświetl harmonogram zajęć</a></li>
                 </ul>
