--- a/dyluna/dyluna_app/templates/users.html
+++ b/dyluna/dyluna_app/templates/users.html
@@ -20,9 +20,9 @@
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/menu/users">Lista wszystkich uczestników</a></li>
-                    <li><a href="/menu/users/students">Lista uczestników</a></li>
-                    <li><a href="/menu/users/teachers">Lista prowadzących</a></li>
+                    <li class="active"><a href="/menu">Lista wszystkich uczestników</a></li>
+                    <li><a href="/students">Lista uczestników</a></li>
+                    <li><a href="/teachers">Lista prowadzących</a></li>
                     <li><a href="/main">Powrót do głównego menu</a></li>
                 </ul>
                 </div>
