Added new command into manage.py - populate_db which creates few data to test work with. Fixed User and Diet forms.

--- a/dyluna/dyluna_app/templates/main.html
+++ b/dyluna/dyluna_app/templates/main.html
@@ -25,6 +25,8 @@
                     <li><a href="/menu">Wyświetl listę użytkowników</a></li>
                     <li><a href="/menu/workshop">Wyświetl listę zajęć</a></li>
                     <li><a href="/menu/workshop_schedule">Wyświetl harmonogram zajęć</a></li>
+                    <li><a href="/user/new">Nowy użytkownik</a></li>
+                    <li><a href="/diet/new">Nowa dieta</a></li>
                 </ul>
                 </div>
             </nav>
