Added basic mechanics bound with account. Added displaying behaviour to some of models so they appear more human friendly.

--- a/dyluna/dyluna_app/templates/workshop.html
+++ b/dyluna/dyluna_app/templates/workshop.html
@@ -31,7 +31,7 @@
     {% endblock %}
     {% block table %}
     <div class="container">
-    <h2>Lista zleceń</h2>
+    <h2>Lista zajęć</h2>
     <table class="table">
       <thead>
       <tr>
