--- a/dyluna/dyluna_app/templates/main.html
+++ b/dyluna/dyluna_app/templates/main.html
@@ -17,7 +17,15 @@
     <div class="container">
         <div class="jumbotron">
             <h1>Dyluna</h1>
-            <p>Główne menu:</p>
+            <p>Główne menu dla:</p>
+
+         {% if user.is_authenticated %}
+            <p><b> {{ user.get_username }} </b></p>
+            <a href="{% url 'logout'%}?next={{request.path}}">Wyloguj</a>
+            {% else %}
+                <a href="{% url 'login'%}?next={{request.path}}"><b>Zaloguj</b></a>
+         {% endif %}
+
             {% block menu %}
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
