--- a/dyluna/dyluna_app/templates/users.html
+++ b/dyluna/dyluna_app/templates/users.html
@@ -33,7 +33,7 @@
     {% endblock %}
     {% block table %}
     <div class="container">
-    <h2>Lista zleceń</h2>
+    <h2>Lista osób</h2>
     <table class="table">
       <thead>
       <tr>
