--- a/dyluna/templates/form_template.html
+++ b/dyluna/templates/form_template.html
@@ -1,5 +1,5 @@
 {{ data }}{% block content %}
-    <h1>New {{ name }}</h1>
+    <h1>Dodaj {{ name }}</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Save</button>
