--- a/dyluna/dyluna_app/templates/main.html
+++ b/dyluna/dyluna_app/templates/main.html
@@ -33,8 +33,8 @@
                     <li><a href="/menu">Wyświetl listę użytkowników</a></li>
                     <li><a href="/workshop">Wyświetl listę zajęć</a></li>
                     <li><a href="/menu/workshop_schedule">Wyświetl harmonogram zajęć</a></li>
-                    <li><a href="/user/new">Nowy użytkownik</a></li>
-                    <li><a href="/diet/new">Nowa dieta</a></li>
+                    <li><a href="{% url 'signup'%}?next={{request.path}}"><b>Zarejestruj nowego użytkownika</b></a></li>
+                    <li><a href="{% url 'new_workshop'%}">Nowe zajęcia</a></li>
                 </ul>
                 </div>
             </nav>
