--- a/dyluna/dyluna_app/templates/users.html
+++ b/dyluna/dyluna_app/templates/users.html
@@ -23,7 +23,7 @@
                     <li class="active"><a href="/menu">Lista wszystkich uczestników</a></li>
                     <li><a href="/students">Lista uczestników</a></li>
                     <li><a href="/teachers">Lista prowadzących</a></li>
-                    <li><a href="/main">Powrót do głównego menu</a></li>
+                    <li><a href="/list">Powrót spisu</a></li>
                 </ul>
                 </div>
             </nav>
