--- a/dyluna/dyluna_app/templates/menu_users_teachers.html
+++ b/dyluna/dyluna_app/templates/menu_users_teachers.html
@@ -7,7 +7,7 @@
                 <li><a href="/menu">Lista wszystkich uczestników</a></li>
                 <li><a href="/students">Lista uczestników</a></li>
                 <li class="active"><a href="/teachers">Lista prowadzących</a></li>
-                <li><a href="/main">Powrót do głównego menu</a></li>
+                <li><a href="/list">Powrót do spisu</a></li>
             </ul>
         </div>
     </nav>
