--- a/dyluna/dyluna_app/templates/workshop.html
+++ b/dyluna/dyluna_app/templates/workshop.html
@@ -20,8 +20,8 @@
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/menu">Lista wszystkich uczestników</a></li>
-                    <li><a href="/main">Powrót do głównego menu</a></li>
+                    <li class="active"><a href="/workshop">Lista wszystkich zajęć</a></li>
+                    <li><a href="/list">Powrót do spisu</a></li>
                 </ul>
                 </div>
             </nav>
