Dodano posiłek oraz harmonogram zajęć

--- a/dyluna/dyluna_app/templates/list_template.html
+++ b/dyluna/dyluna_app/templates/list_template.html
@@ -23,7 +23,7 @@
                     <li><a href="/menu">Wyświetl listę użytkowników</a></li>
                     <li><a href="/workshop">Wyświetl listę zajęć</a></li>
                     <li><a href="/schedules">Wyświetl harmonogramy zajęć</a></li>
-                    <li><a href="/teachers">Wyświetl listę posiłków</a></li>
+                    <li><a href="/meals">Wyświetl listę posiłków</a></li>
                     <li><a href="/teachers">Wyświetl listę miejsc</a></li>
                     <li><a href="/teachers">Wyświetl listę preferencji użytkowników</a></li>
                     <li><a href="/main">Powrót do głównego menu</a></li>
