Dodano miejsca i preferencje drobne poprawki

--- a/dyluna/dyluna_app/templates/list_template.html
+++ b/dyluna/dyluna_app/templates/list_template.html
@@ -24,8 +24,8 @@
                     <li><a href="/workshop">Wyświetl listę zajęć</a></li>
                     <li><a href="/schedules">Wyświetl harmonogramy zajęć</a></li>
                     <li><a href="/meals">Wyświetl listę posiłków</a></li>
-                    <li><a href="/teachers">Wyświetl listę miejsc</a></li>
-                    <li><a href="/teachers">Wyświetl listę preferencji użytkowników</a></li>
+                    <li><a href="/places">Wyświetl listę miejsc</a></li>
+                    <li><a href="/preferences">Wyświetl listę preferencji użytkowników</a></li>
                     <li><a href="/main">Powrót do głównego menu</a></li>
                 </ul>
                 </div>
