--- a/dyluna/dyluna_app/templates/places.html
+++ b/dyluna/dyluna_app/templates/places.html
@@ -15,12 +15,12 @@
     {% block main_layout %}
     <div class="container">
         <div class="jumbotron">
-            <h2>Lista posiłków</h2>
+            <h2>Lista wszystkich miejsc</h2>
             {% block menu %}
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/meals">Lista wszystkich posiłków</a></li>
+                    <li class="active"><a href="/places">Lista wszystkich miejsc</a></li>
                     <li><a href="/list">Powrót do spisu</a></li>
                 </ul>
                 </div>
@@ -35,17 +35,17 @@
     <table class="table">
       <thead>
       <tr>
-        <th>Id posiłku</th>
-        <th>Menu posiłku</th>
-        <th>Czas posiłku</th>
+        <th>Id miejsca</th>
+        <th>Nazwa miejsca</th>
+        <th>Opis miejsca</th>
       </tr>
       </thead>
       <tbody>
-      {% for meal in meals %}
+      {% for place in places %}
         <tr>
-          <td>{{meal.meal.id}}</td>
-          <td>{{meal.meal.menu}}</td>
-          <td>{{meal.meal_time}}</td>
+          <td>{{place.id}}</td>
+          <td>{{place.name}}</td>
+          <td>{{place.description}}</td>
         </tr>
       {% endfor %}
       </tbody>
