--- a/dyluna/dyluna_app/templates/workshop_schedule.html
+++ b/dyluna/dyluna_app/templates/workshop_schedule.html
@@ -15,7 +15,7 @@
     {% block main_layout %}
     <div class="container">
         <div class="jumbotron">
-            <h2>Lista zajęć</h2>
+            <h2>Lista harmonogramów zajęć</h2>
             {% block menu %}
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
