--- a/dyluna/dyluna_app/templates/add_list_template.html
+++ b/dyluna/dyluna_app/templates/add_list_template.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -12,29 +16,21 @@
     <link href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/themes/blitzer/jquery-ui.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div class="main">
     {% block main_layout %}
     <div class="container">
         <div class="jumbotron">
-            <h1>Dyluna</h1>
-            <p>Główne menu dla:</p>
-
-         {% if user.is_authenticated %}
-            <p><b> {{ user.get_username }} </b></p>
-            {% else %}
-                <a href="{% url 'login'%}?next={{request.path}}"><b>Zaloguj</b></a>
-         {% endif %}
-
+            <h2>Spis list:</h2>
             {% block menu %}
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'list'%}">Wyświetl spis</a></li>
-                    <li><a href="{% url 'add_list'%}">Dodaj nowe obiekty</a></li>
-                    <li><a href="{% url 'signup'%}?next={{request.path}}">Zarejestruj kolejnego użytkownika</a></li>
-                     {% if user.is_authenticated %}
-                         <li><a href="{% url 'logout'%}?next={{request.path}}">Wyloguj</a></li>
-                     {% endif %}
+                    <li><a href="/signup">Dodaj użytkownika</a></li>
+                    <li><a href="/workshop/add">Dodaj zajęcia</a></li>
+                    <li><a href="/schedules/add">Wyświetl harmonogramy zajęć</a></li>
+                    <li><a href="/meals/add">Dodaj posiłek</a></li>
+                    <li><a href="/places/add">Dodaj miejscę</a></li>
+                    <li><a href="/preferences/add">Dodaj preferencje użytkownika</a></li>
+                    <li><a href="/main">Powrót do głównego menu</a></li>
                 </ul>
                 </div>
             </nav>
@@ -42,7 +38,10 @@
         </div>
     </div>
     {% endblock %}
+</body>
+</html></title>
+</head>
+<body>
 
-</div>
 </body>
 </html>
