--- a/dyluna/dyluna_app/templates/new_things.html
+++ b/dyluna/dyluna_app/templates/new_things.html
@@ -12,29 +12,21 @@
     <link href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/themes/blitzer/jquery-ui.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div class="main">
     {% block main_layout %}
     <div class="container">
         <div class="jumbotron">
-            <h1>Dyluna</h1>
-            <p>Główne menu dla:</p>
-
-         {% if user.is_authenticated %}
-            <p><b> {{ user.get_username }} </b></p>
-            <a href="{% url 'logout'%}?next={{request.path}}">Wyloguj</a>
-            {% else %}
-                <a href="{% url 'login'%}?next={{request.path}}"><b>Zaloguj</b></a>
-         {% endif %}
-
+            <h2>Spis list:</h2>
             {% block menu %}
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li><a href="/list">Wyświetl spis</a></li>
-                    <li><a href="/workshop">Wyświetl listę zajęć</a></li>
-{#                    <li><a href="/menu/workshop_schedule">Wyświetl harmonogram zajęć</a></li>#}
-                    <li><a href="{% url 'signup'%}?next={{request.path}}"><b>Zarejestruj nowego użytkownika</b></a></li>
-                    <li><a href="{% url 'new_things'%}">Dodaj nowe</a></li>
+                    <li><a href="{% url 'new_workshop'%}">Dodaj nowe zajęcia</a></li>
+                    <li><a href="{% url 'new_user'%}">Dodaj nowego uczestnika</a></li>
+                    <li><a href="{% url 'new_diet'%}">Dodaj nową dietę</a></li>
+                    <li><a href="/meals">Wyświetl listę posiłków</a></li>
+                    <li><a href="/places">Wyświetl listę miejsc</a></li>
+                    <li><a href="/preferences">Wyświetl listę preferencji użytkowników</a></li>
+                    <li><a href="/main">Powrót do głównego menu</a></li>
                 </ul>
                 </div>
             </nav>
@@ -42,7 +34,5 @@
         </div>
     </div>
     {% endblock %}
-
-</div>
 </body>
 </html>
