--- a/dyluna/dyluna_app/templates/new_things.html
+++ b/dyluna/dyluna_app/templates/new_things.html
@@ -23,9 +23,12 @@
                     <li><a href="{% url 'new_workshop'%}">Dodaj nowe zajęcia</a></li>
                     <li><a href="{% url 'new_user'%}">Dodaj nowego uczestnika</a></li>
                     <li><a href="{% url 'new_diet'%}">Dodaj nową dietę</a></li>
-                    <li><a href="/meals">Wyświetl listę posiłków</a></li>
-                    <li><a href="/places">Wyświetl listę miejsc</a></li>
-                    <li><a href="/preferences">Wyświetl listę preferencji użytkowników</a></li>
+                    <li><a href="{% url 'new_workshop_schedule'%}">Dodaj nowy harmonogram</a></li>
+                    <li><a href="{% url 'new_meal'%}">Dodaj nowy posiłek</a></li>
+                    <li><a href="{% url 'new_meal_time'%}">Dodaj nowy czas posiłku</a></li>
+                    <li><a href="{% url 'new_type'%}">Dodaj nowy typ zajęć</a></li>
+                    <li><a href="{% url 'new_preferences'%}">Dodaj nowe preferencje</a></li>
+                    <li><a href="{% url 'new_place'%}">Dodaj nowe miejsce</a></li>
                     <li><a href="/main">Powrót do głównego menu</a></li>
                 </ul>
                 </div>
