--- a/dyluna/dyluna_app/templates/new_things.html
+++ b/dyluna/dyluna_app/templates/new_things.html
@@ -29,6 +29,7 @@
                     <li><a href="{% url 'new_type'%}">Dodaj nowy typ zajęć</a></li>
                     <li><a href="{% url 'new_preferences'%}">Dodaj nowe preferencje</a></li>
                     <li><a href="{% url 'new_place'%}">Dodaj nowe miejsce</a></li>
+                    <li><a href="{% url 'new_equipment'%}">Dodaj nowe wyposażenie</a></li>
                     <li><a href="/main">Powrót do głównego menu</a></li>
                 </ul>
                 </div>
