--- a/dyluna/dyluna_app/templates/main.html
+++ b/dyluna/dyluna_app/templates/main.html
@@ -31,10 +31,11 @@
                 <div class="container-fluid">
                 <ul class="nav navbar-nav">
                     <li><a href="/list">Wyświetl spis</a></li>
-                    <li><a href="/workshop">Wyświetl listę zajęć</a></li>
-{#                    <li><a href="/menu/workshop_schedule">Wyświetl harmonogram zajęć</a></li>#}
-                    <li><a href="{% url 'signup'%}?next={{request.path}}"><b>Zarejestruj nowego użytkownika</b></a></li>
                     <li><a href="{% url 'new_things'%}">Dodaj nowe</a></li>
+{#                    <li><a href="/workshop">Wyświetl listę zajęć</a></li>#}
+{#                    <li><a href="/menu/workshop_schedule">Wyświetl harmonogram zajęć</a></li>#}
+{#                    <li><a href="{% url 'signup'%}?next={{request.path}}"><b>Zarejestruj nowego użytkownika</b></a></li>#}
+                    <li><a href="{% url 'info_about'%}">Informacje o systemie</a></li>
                 </ul>
                 </div>
             </nav>
