MVC finaly done

--- a/dyluna/dyluna_app/templates/info_about.html
+++ b/dyluna/dyluna_app/templates/info_about.html
@@ -5,8 +5,11 @@
     <title>About Dyluna</title>
 </head>
 <body>
-<p>Dyluna is a micro-project to help organise events.</p>
-<p>Check out github: <a href="https://github.com/Szymen/dyluna">CLICK ME!</a></p>
-<a href="{% url 'main'%}">Main Dyluna page</a>
+<div align="center">
+    <p>Dyluna to mini-projekt, którego celem jest pomoc w organizacji wydarzeń.</p>
+    <p>Sprawdź Gtihub: <a href="https://github.com/Szymen/dyluna">KLIKNIJ NA MNIE!</a></p>
+    <a href="{% url 'main'%}">Główna strona Dyluna</a>
+</div>
+
 </body>
 </html>
